[package]
description = "An experimental Tauri Plugin for Sentry"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "tauri-plugin-sentry"
readme = "README.md"
repository = "https://github.com/timfish/sentry-tauri"
version = "0.3.0"
links = "tauri-plugin-sentry"
exclude = ["/examples", "/node_modules", "/target"]

[dependencies]
base64 = "0.22"
sentry = "0.35"
sentry-rust-minidump = "0.9"
serde = "1"
tauri = { git = "https://github.com/tari-project/tauri.git", rev="67a06c8a9bae94f412b8059dfa8b4d8dd8ea0a25"}
thiserror = "2"
schemars = "0.8"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }